--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,13 @@
 [project]
-name = "tulip-tg-bot"
+name = "tulip"
 version = "0.1.0"
 description = "A Telegram bot written using the python-telegram-bot library"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "python-telegram-bot>=21.6",
+    "pydantic>=2.9.2",
+    "pydantic-settings>=2.5.2",
 ]
 
 [build-system]
