--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "python-telegram-bot>=21.6",
     "pydantic>=2.9.2",
     "pydantic-settings>=2.5.2",
+    "sqlalchemy>=2.0.35",
 ]
 
 [build-system]
