feat: add extraction capabilities
Signed-off-by: Sphericalkat <me@kat.bio>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,14 @@ dependencies = [
     "pydantic>=2.9.2",
     "pydantic-settings>=2.5.2",
     "sqlalchemy>=2.0.35",
+    "alembic>=1.13.3",
 ]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.uv]
+dev-dependencies = [
+    "ruff>=0.6.8",
+]
